[gd_scene load_steps=6 format=3 uid="uid://bsl86s6bgqn56"]

[ext_resource type="Script" path="res://scenes/common/pause_dialog.gd" id="1_3k774"]
[ext_resource type="FontFile" uid="uid://bole0tasrv4tw" path="res://scenes/data/fonts/Rakkas-Regular.ttf" id="2_7lf54"]
[ext_resource type="Theme" uid="uid://cegg3xuaofnvx" path="res://scenes/data/theme.tres" id="3_hs8ta"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_po01f"]
bg_color = Color(0.937255, 0.901961, 0.870588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 0.168627, 0.105882, 0.698039)

[sub_resource type="LabelSettings" id="LabelSettings_jrk2x"]
font = ExtResource("2_7lf54")
font_size = 46
font_color = Color(0.360784, 0.254902, 0.113725, 1)
shadow_color = Color(0, 0, 0, 0.572549)

[node name="PauseDialog" type="CanvasLayer"]
process_mode = 2
layer = 50
script = ExtResource("1_3k774")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.345098)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -90.0
offset_right = 180.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hs8ta")
theme_type_variation = &"ui"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Panel2" type="PanelContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_po01f")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/Panel2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/MarginContainer/Panel2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_jrk2x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="Panel/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_forfeit_confirm_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_forfeit_cancel_button_pressed"]
